Group Bulletin Board

3.51:
  Mists:
   - Minor development fix for error introduced in 3.50

3.50:
 - Add Burning Crusade patch 2.5.5 support

3.49:
  - General:
    - Fix issues in 1.15.8 and 5.5.2 encountered when interacting with popup dialogs created by the addon

3.48:
  - Era:
   - Fix issue with addon options panel scrolling for patch 1.15.8

3.47:
  - Mists:
    - Fix lua errors related to font templates, when opening the bulletin board

3.46:
  - General:
    - Custom filter categories (under 'Additional Filters' in settings) now have a new option, "Isolate Requests".
      - When enabled, any matching bulletin board requests will only get categorized under that filter.
  - Mists of Pandaria:
    - Added dedicated filter categories for world bosses (excluding four celestials)
    - Tweaks to default search patterns for various MoP dungeons

3.45:
  - Added preliminary support for Mists of Pandaria classic
  - Locking the bulleting board window now prevents resizing.
  - Added "Disable" filter option to dungeon header right-click menus
  - Added "Dismiss Request" button to request entry right-click menus
  - Moved additional options to the right-click version of the bulletin board's settings button's menu.
    - now includes tooltip indicating the extra right-click menu's existence.
  - Added more custom filter settings (under "Additional Filters" panel).
    - Filters now include option to allow words inside of [item links] to be used for filtering.
      - accessed via a gear icon next to the custom filter's name.

3.44
  - General:
    - Added settings for Locking, Changing Opacity, and Disabling Interactivity of the Bulletin Board window
      - Accessed via the settings button in the top right corner of the main window.
    - Added settings for changing the position of the addon tabs on the bulletin board (between the top and bottom).
      - Accessed via a new tooltip menu when right-clicking on the tab buttons.